--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,6 @@
 anyio==3.6.1
-click==8.1.3
-colorama==0.4.5
-fastapi==0.78.0
-h11==0.13.0
-idna==3.3
-pydantic==1.9.1
-sniffio==1.2.0
-starlette==0.19.1
-typing_extensions==4.2.0
-uvicorn==0.18.2
-anyio==3.6.1
 autopep8==1.6.0
+black==22.6.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
@@ -19,13 +9,20 @@ fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.2
 pycodestyle==2.8.0
 pydantic==1.9.1
 PyMySQL==1.0.2
+python-dotenv==0.20.0
+python-multipart==0.0.5
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.39
 starlette==0.19.1
 toml==0.10.2
+tomli==2.0.1
 typing_extensions==4.2.0
 urllib3==1.26.10
 uvicorn==0.18.2
