--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 anyio==3.6.1
+atomicwrites==1.4.1
+attrs==22.1.0
 autopep8==1.6.0
 black==22.6.0
 certifi==2022.6.15
@@ -9,14 +11,25 @@ fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+iniconfig==1.1.1
 mypy-extensions==0.4.3
+numpy==1.23.1
+packaging==21.3
+pandas==1.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
 pycodestyle==2.8.0
 pydantic==1.9.1
 PyMySQL==1.0.2
+pyparsing==3.0.9
+pytest==7.1.2
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-multipart==0.0.5
+pytz==2022.1
+requests==2.28.1
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.39
