--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ attrs==22.1.0
 autopep8==1.6.0
 black==22.6.0
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
+coverage==6.4.2
+cryptography==37.0.4
 fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
@@ -21,6 +24,7 @@ platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
 pycodestyle==2.8.0
+pycparser==2.21
 pydantic==1.9.1
 PyMySQL==1.0.2
 pyparsing==3.0.9
