--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,9 +54,9 @@ jobs:
       - name: Create archive of dependencies
         run: |
           cd ./venv/lib/python3.10/site-packages
-          zip -r9 ../../../../api.zip .
+          zip -r ../../../../api.zip .
       - name: Add API files to Zip file
-        run: cd ./src/api && zip -g ../api.zip -r .
+        run: zip -ur ../api.zip ./src/api
       - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
@@ -66,7 +66,7 @@ jobs:
   CD:
     runs-on: ubuntu-latest
     needs: [CI]
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master  ' && github.event_name == 'push'
     steps:
       - name: Install AWS CLI
         uses: unfor19/install-aws-cli-action@v1
