--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
           cd ./venv/lib/python3.10/site-packages
           zip -r9 ../../../../api.zip .
       - name: Add API files to Zip file
-        run: zip -ur ../api.zip ./src/api
+        run: cd ./src/api && zip -g ../api.zip -r .
       - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
