--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Create archive of dependencies
         run: |
           cd ./venv/lib/python3.10/site-packages
-          zip -r9 ../../../../api.zip .
+          zip -r9 ./api.zip .
       - name: Add API files to Zip file
         run: cd ./src/api && zip -g ../api.zip -r .
       - name: Upload zip file artifact
