fix: path to zip

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           cd ./venv/lib/python3.10/site-packages
           zip -r9 ./api.zip .
       - name: Add API files to Zip file
-        run: cd ./src/api && zip -g ../api.zip -r .
+        run: cd ./src/api && zip -g .../api.zip -r .
       - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
