fix: formatting issue in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   # Trigger the workflow on push
   push:
     branches: ["preprocess-yml"]
-  pull:
+  pull_request:
     branches: ["master"]
     paths: [".github/workflows/main.yaml"]
 
