--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,7 @@ jobs:
           DB_PORT: ${{ secrets.DB_PORT }}
       - name: Create archive of dependencies
         run: |
-          cd ./venv/lib/python3.10/site-packages
-          zip -r9 ../../../../api.zip .
+          cd ./venv/lib/python3.10/site-packages && zip -r9 ../../../../api.zip .
       - name: Add API files to Zip file
         run: cd ./src/api && zip -g ../api.zip -r .
       - name: Upload zip file artifact
